# Latinka-transliterator

./: CMakeLists.txt  doxygen_script  latinkaConverter.cpp  latinkaConverter.h  latinkaConverterStd.cpp  latinkaConverterStd.h  main.cpp  mainWindow.cpp  mainWindow.h
app_latinka_tl/: CMakeLists.txt  alphabet.html  choven.txt  darkTheme.h  keyboard_layout.html  keyboard_layout.odt  latinka_rules.html  main.cpp  mainWindow.cpp  mainWindow.h  rc.qrc  rules.html  xkb.html
doc/html/: annotated.html  annotated_dup.js  classes.html  dir_14a87c2344ed88247a52837c97c76097.html  dir_14a87c2344ed88247a52837c97c76097.js  dir_43a0e30ecb92b45e02a3b77a14d8dff7.html  dir_43a0e30ecb92b45e02a3b77a14d8dff7.js  dir_a08355ad2fb30724040dbb8475067acd.html  dir_a08355ad2fb30724040dbb8475067acd.js  dir_a10b35417eaa1bd636c3780655a92b25.html  dir_a10b35417eaa1bd636c3780655a92b25.js  files.html  files_dup.js  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  menudata.js  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js
doc/latex/: annotated.tex  dir_14a87c2344ed88247a52837c97c76097.tex  dir_43a0e30ecb92b45e02a3b77a14d8dff7.tex  (+6 more)
lib_latinka_tl/: CMakeLists.txt  alphabet.html  alphabet.odt  latinkaConverter.cpp  latinka_rules.odt  rules.odt
lib_latinka_tl/include/: AFlatinka
lib_latinka_tl/include/lib_latinka_tl/: latinkaConverter.h
(+103 files in other folders)
